# LISE-WebAssembly

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  cheerp-build.sh  example.cpp  example.js  package.json  setup.sh  test.sh
build.emscripten/: client.js  index.html
example/: client.js  index.html
lib/assimp-bust/include/assimp/: defs.h
lib/assimp-bust/lib-js/: libassimp.bc
src/: Application.cpp  Application.h  MyClass.cpp  MyClass.h
stat/: index.html  loader.js  output.wasm
test/: cpp_sorter_test.cpp
